initial commit with layers and gitignore file

--- a/API-Gateway-School.Application/API-Gateway-School.Application.csproj
+++ b/API-Gateway-School.Application/API-Gateway-School.Application.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>API_Gateway_School_Application</RootNamespace>
+    <RootNamespace>API_Gateway_School.Application</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
