--- a/API-Gateway-School.Domain/API-Gateway-School.Domain.csproj
+++ b/API-Gateway-School.Domain/API-Gateway-School.Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>API_Gateway_School_Infraestructure</RootNamespace>
+    <RootNamespace>API_Gateway_School.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
