--- a/API-Gateway-School.Infraestructure/API-Gateway-School.Infraestructure.csproj
+++ b/API-Gateway-School.Infraestructure/API-Gateway-School.Infraestructure.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>API_Gateway_School_Domain</RootNamespace>
+    <RootNamespace>API_Gateway_School.Infraestructure</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
